--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,57 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build files
+dist/
+dist-ssr/
+*.local
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
 .DS_Store
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Build output
+.next/
+out/
+build/
+.server/
+
+# Local development
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Misc
+.cache/
+.temp/
+.tmp/
+.vercel
+.netlify
+.vercel_build_output/
+
+# Logs
+logs
+*.log
+
+# System Files
+.DS_Store
+Thumbs.db
