Configure Netlify deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev:client": "vite dev --port 5000",
+    "dev:client": "cd client && npm run dev",
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "cd client && npm install && npm run build",
     "build:server": "tsx script/build.ts",
