--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  command = "cd client && npm install && npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
   base = "."
 
 [dev]
-  command = "cd client && npm run dev"
+  command = "npm run dev:client"
   targetPort = 3000
   publish = "dist"
 
